# ece0302-nml62

./: .gitignore  bag_tests.cpp
add_starter_code/: add-tests
hw0_add/: add.tpp  add_tests.cpp
hw1/: bag-tests  bag.hpp  bag.tpp  bag_tests.cpp
hw2/: abstract_bag.hpp  bag-tests  bag_simple.hpp
hw3/dynamic_bag_starter_code/: CMakeLists.txt  bag_tests.cpp  dynamic-bag-tests  dynamic_bag.hpp  dynamic_bag.tpp  dynamic_bag_tests.cpp
hw3/egyptian_powers_starter_code/: fancyPower-tests  fancyPower.hpp  fancyPower_tests.cpp
hw5_postfix_prefix_starter_code/: algebraic_expressions.cpp  postpre
hw8-1/: priorityQueueTests  sortedListTests  sorted_list.tpp  test_priority_queue.cpp  test_sorted_list.cpp
p2_starter_code/: CMakeLists.txt  FindPalindrome-main  FindPalindrome-tests  FindPalindrome.cpp  FindPalindrome.hpp  FindPalindrome_main.cpp  FindPalindrome_test.cpp
p2_starter_code/p2_palindrome/: parsePalindromeTests.py  sentence-palindromes.txt
p3_starter_code/: CMakeLists.txt  XMLParser-more-tests  XMLParser-tests  XMLParser.cpp  XMLParser.hpp  XMLParser_more_test.cpp  XMLParser_test.cpp  mainStack  mainXMLParser  xml-tests.cpp
p4_starter_code/: CMakeLists.txt  compare  deque.hpp  deque.tpp  linked_list.hpp  linked_list.tpp  pathfinder  pathfinder.cpp  student-tests  test_deque.cpp  test_linked_list  test_linked_list.cpp
p5_starter_code/: frontier_queue.hpp  frontier_queue.tpp  test_frontier_queue  test_frontier_queue.cpp  test_solver
project1/: bitset-tests  bitset.cpp  bitset.hpp  bitset_test.cpp
project1-bonus/: bitset-tests  bitset.hpp
(+53 files in other folders)
